# Ai_agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  olist-chatbot.code-workspace  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
eval/: golden.yaml  run_eval.py
queries/: 01_schema_overview.sql  02_business_questions.sql
src/: agent.py  api.py  app.py  cache.py  callbacks.py  config.py  dashboard.py  db.py  etl.py  logging_setup.py  marts.sql  metrics.py  schema.sql  seed_readonly_user.sql  session_history.py  sql_guardrail.py  state_store.py  web_tools.py
tests/: conftest.py  test_agent_memory.py  test_api.py  test_cache.py  test_callbacks.py  test_chart_detection.py  test_config.py  test_eval_harness.py  test_metrics.py  test_prompt_injection.py  test_sql_guardrail.py  test_state_store.py  test_web_tools.py
